clang/test/BSC/Negative/Ownership/Borrow/borrow_expr_freeze/borrow_ident_freeze/borrow_ident_freeze.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test_freeze_ident1() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  // we can modify "a" when c life time is end;
  a = 2;
}

void test_freeze_ident2() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{`a` is borrowed here}}
  a = 2; // expected-error {{cannot assign to `a` because it is borrowed}}
  int d = *c;
}

void test_freeze_ident2_0() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{`a` is borrowed here}}
  int m = a; // expected-error {{cannot use `a` because it was mutably borrowed}}
  int d = *c;
}

void test_freeze_ident3() {
  int a = 1;
  int b = 2;
  int *_Borrow c = &_Mut a;
  // "c" life time is end at before, and reactivate at after;
  a = 2;
  c = &_Mut b;
}

void test_freeze_ident4() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  int *_Borrow d = &_Mut a;    
}

void test_freeze_ident5() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow d = &_Mut a; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
  int e = *c;
}

void test_freeze_ident6() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  int *_Borrow d = &_Mut a;
  int e = *d;
}

void test_freeze_ident6_0() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow d = &_Mut a; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
  int e = *d;
  int f = *c;
}

void test_freeze_ident6_1() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow d = &_Mut a; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
  int e = *c;
  int f = *d;
}

void test_freeze_ident6_2() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  int *_Borrow d = c; // expected-note {{`*c` is borrowed here}}
  int e = *c; // expected-error {{cannot use `*c` because it was mutably borrowed}}
  int f = *d;
}

void use(int *_Borrow a) {}

void test_freeze_ident6_3() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  int *_Borrow d = c; // expected-note {{`*c` is borrowed here}}
  int e = *c; // expected-error {{cannot use `*c` because it was mutably borrowed}}
  use(d);
}

void test_freeze_ident7() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  const int *_Borrow d = &_Const a;
}

void test_freeze_ident8() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow d = &_Const a; // expected-error {{cannot borrow `a` as immutable because it is also borrowed as mutable}}
  int e = *c;
}

void test_freeze_ident9() {
  int a = 1;
  int *_Borrow c = &_Mut a;
  const int *_Borrow d = &_Const a;
  int e = *d;
}

void test_freeze_ident10() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow d = &_Const a; // expected-error {{cannot borrow `a` as immutable because it is also borrowed as mutable}}
  int b = *d;
  int e = *c;
}

void const_use(const int *_Borrow a) {};

void test_freeze_ident11() {
  int a = 1;
  int *_Borrow c = &_Mut a; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow d = &_Const a; // expected-error {{cannot borrow `a` as immutable because it is also borrowed as mutable}}
  int b = *c;
  const_use(d);
}

void test_freeze_ident12() {
  int a = 1;
  const int *_Borrow c = &_Const a;
  const int *_Borrow d = &_Const a;
  int b = *c;
  int e = *d;
}

void test_freeze_ident13() {
  int a = 1;
  const int *_Borrow c = &_Const a; // expected-note {{`a` is borrowed here}}
  a = 2; // expected-error {{cannot assign to `a` because it is borrowed}}
  int b = *c;
}

int test_freeze_ident14(){
  int a = 1;
  int b = 2;
  int *c, *d;
  c = &a;
  d = &b;
  int * _Borrow e = &_Mut *c;
  int m = *d;
  use(e);
  return 0;
}

int test_freeze_ident15(int *_Borrow m){
  int a = 1;
  int b = 2;
  int *c, *d;
  c = &a;
  d = &b;
  int *_Borrow e = &_Mut *c; // expected-note {{first mut borrow occurs here}}
  int *_Borrow f = &_Mut *c; // expected-error {{cannot borrow `*c` as mutable more than once at a time}}
  int g = f == e ? *f : *e;
  use(f);
  use(e);
  return 0;
}

struct S {
  int a;
  int *_Borrow b;
};

void test_freeze_ident17(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow c = &_Mut *b;
  int *d = (int *)b;
}

void test_freeze_ident18(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow c = &_Mut *b; // expected-note {{`*b` is borrowed here}}
  int *d = (int *)b; // expected-error {{cannot move out of `b` because it is borrowed}}
  use(c);
}

void test_freeze_ident19(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow c = &_Mut *b; // expected-note {{`*b` is borrowed here}}
  int *_Owned d = b; // expected-error {{cannot move out of `b` because it is borrowed}}
  use(c);
  int *e = (int *)d;
}

void test_freeze_ident20(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  const int *_Borrow c = &_Const *b; // expected-note {{`*b` is borrowed here}}
  int *_Owned d = b; // expected-error {{cannot move out of `b` because it is borrowed}}
  const_use(c);
  int * e = (int *)d;
}

_Owned struct F {
_Public:
  int a;
};

void owned_struct_use1(F *_Borrow b){}

void test_freeze_ident21(){
  F f = {1};
  F *_Borrow b = &_Mut f; // expected-note {{`f` is borrowed here}}
  F k = f; // expected-error {{cannot move out of `f` because it is borrowed}}
  owned_struct_use1(b);
}

void owned_struct_use2(const F *_Borrow b){}

void test_freeze_ident22(){
  F f = {1};
  const F *_Borrow b = &_Const f; // expected-note {{`f` is borrowed here}}
  F k = f; // expected-error {{cannot move out of `f` because it is borrowed}}
  owned_struct_use2(b);
}

struct H {
  int *_Owned a;
  int b;
};

void owned_struct_use3(struct H *_Borrow b){}

void test_freeze_ident23(){
  int a = 1;
  struct H h = {(int *_Owned)&a, 2};
  struct H *_Borrow b = &_Mut h; // expected-note {{`h` is borrowed here}}
  struct H g = h; // expected-error {{cannot move out of `h` because it is borrowed}}
  owned_struct_use3(b);
  int *c = (int *)g.a;
}

void owned_struct_use4(const struct H *_Borrow b){}

void test_freeze_ident24(){
  int a = 1;
  struct H h = {(int *_Owned)&a, 2};
  const struct H *_Borrow b = &_Const h; // expected-note {{`h` is borrowed here}}
  struct H g = h; // expected-error {{cannot move out of `h` because it is borrowed}}
  owned_struct_use4(b);
  int *c = (int *)g.a;
}

void test_freeze_ident25(){
  int a = 1;
  int *_Borrow p1 = &_Mut a; // expected-note {{`a` is borrowed here}}
  a = 5; // expected-error {{cannot assign to `a` because it is borrowed}}
  int *_Borrow p2 = p1;
}

void test_freeze_ident26(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow p1 = &_Mut *b; // expected-note {{`*b` is borrowed here}}
  int *d = (int *)b; // expected-error {{cannot move out of `b` because it is borrowed}}
  int *_Borrow p2 = p1;
}

void test_freeze_ident27(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow p1 = &_Mut *b; // expected-note {{`*b` is borrowed here}}
  int *_Borrow p2 = p1;
  int *d = (int *)b; // expected-error {{cannot move out of `b` because it is borrowed}}
  use(p2);
}

void test_freeze_ident28(){
  int a = 1;
  int *_Owned b = (int *_Owned)&a;
  int *_Borrow p1 = &_Mut *b; // expected-note {{`*b` is borrowed here}}
                            // expected-note@-1 {{`b` is borrowed here}}
  int *d = (int *)b; // expected-error {{cannot move out of `b` because it is borrowed}}
  int *_Borrow p2 = p1;
  b = (int *_Owned)&a; // expected-error {{cannot assign to `b` because it is borrowed}}
  d = (int *)b;
  use(p2);
}

void test_freeze_ident29(){
  int a = 1;
  int *_Borrow p1 = &_Mut a; // expected-note {{first mut borrow occurs here}}
                           // expected-note@-1 {{`a` is borrowed here}}
  int *_Borrow p2 = &_Mut a; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
  a = 5; // expected-error {{cannot assign to `a` because it is borrowed}}
  p2 = p1;
}

void test_freeze_ident30(){
  int local = 5;
  int *_Borrow p = &_Mut local; // expected-note {{first mut borrow occurs here}}
  use(&_Mut local); // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  use(p);
}